<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>se.trixon.jotasync</groupId>
    <artifactId>parent</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>parent</name>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.netbeans.utilities</groupId>
                    <artifactId>nbm-maven-plugin</artifactId>
                    <version>4.8</version>
                    <extensions>true</extensions>
                    <configuration>
                        <brandingToken>${brandingToken}</brandingToken>
                        <cluster>${brandingToken}</cluster>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.16.1</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.4.1</version>
                    <executions>
                        <execution>
                            <id>enforce</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <banDuplicatePomDependencyVersions/>
                                    <requireMavenVersion>
                                        <version>3.8.6</version>
                                    </requireMavenVersion>
                                    <requireJavaVersion>
                                        <version>17</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                        <execution>
                            <id>ban-bad-log4j-versions</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <bannedDependencies>
                                        <excludes>
                                            <exclude>org.apache.logging.log4j:log4j-core:(,2.17.0)</exclude>
                                        </excludes>
                                    </bannedDependencies>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.netbeans.cluster</groupId>
                <artifactId>platform</artifactId>
                <version>${netbeans.version}</version>
                <type>pom</type>
            </dependency>

            <!-- Trixon -->
            <dependency>
                <groupId>se.trixon.almond</groupId>
                <artifactId>almond-util</artifactId>
                <version>${almond.version}</version>
            </dependency>
            <dependency>
                <groupId>se.trixon.almond</groupId>
                <artifactId>almond-nbp-core</artifactId>
                <version>${almond.version}</version>
            </dependency>
            <dependency>
                <groupId>se.trixon.almond</groupId>
                <artifactId>almond-nbp</artifactId>
                <version>${almond.version}</version>
            </dependency>
            <dependency>
                <groupId>se.trixon.almond</groupId>
                <artifactId>almond-nbp-actions</artifactId>
                <version>${almond.version}</version>
            </dependency>
            <dependency>
                <groupId>se.trixon.almond</groupId>
                <artifactId>almond-nbp-actions-osx</artifactId>
                <version>${almond.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>branding</module>
        <module>application</module>
        <module>main</module>
    </modules>

    <repositories>
        <!--        <repository>
            <id>netbeans-next</id>
            <url>https://repository.apache.org/content/repositories/orgapachenetbeans-1125</url>
        </repository>-->
    </repositories>

    <properties>
        <netbeans.version>RELEASE190</netbeans.version>
        <almond.version>17.0.0-SNAPSHOT</almond.version>
        <brandingToken>jotasync</brandingToken>
    </properties>
</project>
